@@ -1,5 +1,6 @@
 Version 2.02.99 - 
 ===================================
+  Do not use persistent filter with lvmetad.
   Update persistent filter functinality for global filter.
   Override system's global_filter settings for vgimportclone.
   Detect maximum usable size for snapshot for lvresize.
